--- a/NetCoreMVCPractice/Properties/launchSettings.json
+++ b/NetCoreMVCPractice/Properties/launchSettings.json
@@ -2,8 +2,12 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost/NetCoreMVCPractice",
+      "sslPort": 0
+    },
     "iisExpress": {
-      "applicationUrl": "http://localhost:52924/",
+      "applicationUrl": "http://localhost:52924/Product/List",
       "sslPort": 0
     }
   },
